# FuseSage

./: CMakeLists.txt  README.md
include/: agg.h  classify.h  fuseSage.h  kernel.h  sample.h
src/: agg.cu  classify.cu  fuseSage.cu  fuseSage_op.cpp  kernel.cu  sample.cu  utils.h
test/: graph.txt  test.ipynb  test.nsys-rep  test.py  test.sqlite  test_cora.py  test_products.nsys-rep  test_products.py  test_products.sqlite  testv2.py
